ajustes finales del MenuFinal

--- a/MenuFinal/estilos.css
+++ b/MenuFinal/estilos.css
@@ -1,21 +1,23 @@
 * {
     box-sizing: border-box;
+   
+
   }
   body {
-    background: cornflowerblue;
+    background-image: url("usuarioMenu.png"); 
+    /* background: linear-gradient(#076585, #fff); */
+    color: whitesmoke;
+    font-family: sans-serif; 
+  } 
 
-    color: black;
-    font-family: sans-serif;
-  }
-  
+
   form {
     width: 500px;
     margin: auto;
-    background: green;
+    background-color: transparent;
     padding: 20px;
     margin-top: 20px;
-    color: black;
-    border: 1px solid black;
+    color: white;
   }
   h1 {
     text-align: center;
@@ -38,7 +40,4 @@
     color: white;
     border: none;
     cursor: pointer;
-  }
-  .error {
-    color: red;
   }
